# jq-repl

./: Cargo.toml  LICENSE  README.md  generate-commands.sh
.github/workflows/: build.yml
contrib/: config.toml
src/: config.rs  error.rs  lib.rs  main.rs  opt.rs  prompt.rs  transform.rs
tests/: charcounter.rs  config.toml  fzf_arguments.rs  integration.rs
tests/snapshots/: fzf_arguments__check_fzf_command_output.snap
