[package]
name = "jq-repl"
version = "0.17.3"
description = "Interactively explore JSON with fzf and jq."
license = "MIT"
edition = "2021"
authors = ["Matthew Klein <mklein994@gmail.com>"]
default-run = "jq-repl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.4.7", features = ["cargo", "deprecated", "derive", "env", "wrap_help"] }
shell-quote = "0.5.0"
tempfile = "3.8.1"

[dev-dependencies]
insta = "1.34.0"
