[package]
name = "jq-repl"
version = "0.20.2"
description = "Interactively explore JSON with fzf and jq."
license = "MIT"
edition = "2024"
authors = ["Matthew Klein <mklein994@gmail.com>"]
default-run = "jq-repl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.4", features = ["cargo", "deprecated", "derive", "env", "wrap_help"] }
shell-quote = "0.7.1"
tempfile = "3.10.1"

[dev-dependencies]
insta = "1.39.0"
